# atomlang

./: .gitignore  LICENSE  Makefile  README.md  build.bat
.github/workflows/: atomlang-build-linux.yml  atomlang-build-macos.yml  atomlang-build-windows.yml  ci.yml  markdown-lint-check.yml
cli/: CMakeLists.txt  atomlang.c  common.h  internal.h  main.c  modules.c  modules.h  repl.c  thirdparty.c  utils.c  utils.h
docs/: buildatom.md  learnatom.md
src/: atml_buffers.h  atml_compiler.c  atml_compiler.h  atml_core.c  atml_core.h  atml_debug.c  atml_debug.h  atml_internal.h  atml_opcodes.h  atml_utils.c  atml_utils.h  atml_var.c  atml_var.h  atml_vm.c  atml_vm.h  pk_buffers.h  pk_common.h  pk_compiler.h  pk_core.c  pk_core.h  pk_debug.h  pk_internal.h  pk_opcodes.h  pk_utils.h  pk_var.h  pk_vm.h
src/compiler/: atomlang_ast.c  atomlang_ast.h  atomlang_codegen.h  atomlang_compiler.h  atomlang_ircode.h  atomlang_lexer.h  atomlang_optimizer.h  atomlang_parser.h  atomlang_semacheck1.h  atomlang_semacheck2.h  atomlang_symboltable.h  atomlang_token.h  atomlang_visitor.h  debug_macros.h
src/include/: atomlang.c  atomlang.h
src/optionals/: atomlang_opt_env.c  atomlang_opt_env.h  atomlang_opt_file.c  atomlang_opt_json.c  atomlang_opt_json.h  atomlang_opt_math.c  atomlang_opt_math.h  atomlang_optionals.h  gravity_opt_file.h
src/runtime/: atomlang_core.c  atomlang_core.h  atomlang_vm.c  atomlang_vm.h  atomlang_vmmacros.h
src/shared/: atomlang_array.h  atomlang_config.h  atomlang_delegate.h  atomlang_hash.c  atomlang_hash.h  atomlang_macros.h  (+5 more)
tests/: check.py  tests.py
(+23 files in other folders)
